--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wayland-protocols = "0.29.4"
+libc="0.2.121"
+log="0.4.16"
+wayland-sys = { version="0.29.4", features=["server", "client", "egl", "cursor"] }
