--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,7 @@ include_directories(/usr/include/pixman-1)
 
 add_compile_options("-DWLR_USE_UNSTABLE")
 
-add_executable(MagicBox
-        src/main.c
-        src/server.c
-        src/server.h)
+add_executable(MagicBox src/main.c src/server.c src/server.h src/cursor.c src/cursor.h src/keyboard.c src/keyboard.h src/view.c src/view.h)
 
 target_link_libraries(MagicBox
         wayland-server
